--- a/src/main/webapp/resources/css/productSelect.css
+++ b/src/main/webapp/resources/css/productSelect.css
@@ -7,15 +7,151 @@ background:#eee;
 
 .container {
 	margin:0 auto;
+
 }
 
 .product {
-	width:100%;
+	width:1050px;
+	
+}
+
+
+.goods_name .name {
+	font-size: 24px;
+	display:block;
+}
+
+.goods_name span	{
+	font-size: 14px;
+	color: #999;
+}
+
+
+.goods_price .dc	{
+	display: block;
+}
+
+.goods_price .dc_price	{
+	
+	font-size: 28px;
+	font-weight: 700;
+	line-height: 30px;
+}
+
+.goods_price .dc_price .won	{
+	font-size: 18px;
+	font-weight: 700;
+	line-height: 30px;
+	padding: 0 7px 0 2px;
+	vertical-align: 2px;
+}
+
+.goods_price .dc_percent	{
+	font-weight: 700;
+	font-size: 28px;
+	color: #fa622f;
+}
+
+
+.goods_price .ori_price	{
+	font-size: 16px;
+	color:#ccc;
+	line-height: 24px;
+	text-decoration: line-through;
+}
+
+
+.goods_info	{
+	float:right;
+	width:560px;
+	margin-top:19px;
+	padding-bottom: 19px;
+	border-top: 1px solid #f4f4f4;
+	
+}
+
+.goods_info	dl{
+	overflow: hidden;
+	padding: 18px 0;
+	border-bottom: 1px solid #f4f4f4;
+	
+}
+
+.goods_info	dl dt	{
+	float: left;
+	width: 150px;
+	font-size: 14px;
+	color: #666;
+	line-height: 20px;
+}
+
+.goods_info	dl dd	{
+	overflow: hidden;
+	font-size: 14px;
+	line-height: 20px;
+}
+
+.tit_item	{
+	display: none;
 }
 
 
 
-/*panel*/
+
+
+
+.thumb	{
+	float:left;
+	width: 430px;
+	height: 552px;
+	background:blue;
+	
+}
+
+.thumb img	{
+	width: 100%;
+}
+
+
+
+.goods_name {
+	float:right;
+	width: 560px;
+	padding: 10px 0 29px;
+}
+
+
+.goods_dcinfo {
+	float:right;
+	width: 560px;
+	padding: 10px 0 29px;
+}
+
+
+.goods_price {
+	float:right;
+	width: 560px;
+	padding: 10px 0 29px;
+}
+
+
+.goods_info {
+	float:right;
+	width: 560px;
+	padding: 10px 0 29px;
+}
+
+
+
+
+
+
+
+
+/* 
+
+
+panel
 .panel {
     border: none;
     box-shadow: none;
@@ -37,7 +173,7 @@ background:#eee;
     font-family: 'Open Sans', sans-serif;
 }
 
-/*product list*/
+product list
 
 .prod-cat li a{
     border-bottom: 1px dashed #d9d9d9;
@@ -178,3 +314,4 @@ background:#eee;
     font-size: 18px;
     font-weight: 300;
 }
+ */
