--- a/src/main/webapp/resources/css/join.css
+++ b/src/main/webapp/resources/css/join.css
@@ -34,13 +34,14 @@
 			padding:17px 0 0;
 		}
 		
+		/* ......................................... */
 		
 		.member_join 	{
 			width:640px;
 			margin:0 auto;
 		}
 		
-		.member_join h3	{
+		.member_join h3	{/* <h3>일떄 적용된다. */
 			display:block;
 			text-align:right;
 			font-size:12px;
@@ -53,6 +54,8 @@
 			background-color:#fff;
 			border:1px solid #f3f2f4;
 		}
+		
+		/* ......................................... */
 		
 		.border_write	{
 			padding:9px 0 19px;	
@@ -82,8 +85,16 @@
 		
 		.border_write .memberCols2	{
 			padding:25px 0 0;
-		
 		}
+		
+		.border_write1 { /* soyeon작성 */
+			padding:50px 90px 0;
+		}
+		
+		.border_write2 { /* soyeon작성 */
+			padding:0 90px 0;
+		}
+		
 
 		.border_write .memberCols2 input	{
 			width:280px;
@@ -96,6 +107,10 @@
 			outline:none;
 		}
 		
+
+		.scroll{
+			padding:7px 0 0;
+		}
 
 		.add .memberCols2 .text_guide	{
 			font-size:12px;
