Modify_JoinConfirm check part
전체체크 부분체크 수정
스크립트 버튼 링크 수정

--- a/src/main/webapp/resources/css/join.css
+++ b/src/main/webapp/resources/css/join.css
@@ -54,7 +54,15 @@
 			background-color:#fff;
 			border:1px solid #f3f2f4;
 		}
-		
+
+		.frm1 	{
+			width:640px;
+			margin:0 auto;
+		}
+		.frm2	{
+			background-color:#fff;
+			border:1px solid #f3f2f4;
+		}
 		/* ......................................... */
 		
 		.border_write	{
