--- a/src/main/webapp/resources/css/productSelect.css
+++ b/src/main/webapp/resources/css/productSelect.css
@@ -205,6 +205,7 @@ background:#eee;
 	width: 22px;
 	height: 22px;
 	border: 0;
+	border-radius:0;
 	background: #f6f7f7;
 	font-size: 0;
 	line-height: 0;
@@ -212,14 +213,20 @@ background:#eee;
 }
 
 .cartPut .list_nopackage .down {
-	
+	border-right:1px solid #dddfe1;
+}
+
+.cartPut .list_nopackage .up {
+	border-left:1px solid #dddfe1;
 }
 
 .cartPut .list_nopackage .inp	{
+	display:block;
 	float:left;
-	width: 42px;
+	width: 40px;
 	height: 24px;
-	padding: 0 0 2px;
+	padding: 0 0 2px 10px;
+	margin:0;
 	border: 0;
 	background: #fff;
 	color:#000;
