--- a/src/main/webapp/resources/css/productSelect.css
+++ b/src/main/webapp/resources/css/productSelect.css
@@ -5,6 +5,11 @@ background:#eee;
 }
 
 
+button	{
+	padding:0;
+}
+
+
 
 .container {
 	margin:0 auto;
@@ -173,7 +178,7 @@ background:#eee;
 
 .cartPut .list_nopackage .tit_item {
 	float: left;
-	width: 150px;
+	width: 145px;
 	font-size: 14px;
 	color: #666;
 	line-height: 20px;
@@ -198,7 +203,7 @@ background:#eee;
 }
 
 
-.cartPut .list_nopackage .btn	{
+.cartPut .list_nopackage .btn {
 	overflow: hidden;
 	position: relative;
 	float: left;
@@ -207,10 +212,26 @@ background:#eee;
 	border: 0;
 	border-radius:0;
 	background: #f6f7f7;
-	font-size: 0;
-	line-height: 0;
-	text-indent: -9999px;
+	font-size:22px;
+	text-align:center;
+	color:black;
+	vertical-align: middle;
+
 }
+/* 
+
+.btn2 {
+	float: left;
+	width: 22px;
+	height: 22px;
+	background: #f6f7f7;
+	border: 0;
+	border-radius:0;
+	
+} */
+
+
+
 
 .cartPut .list_nopackage .down {
 	border-right:1px solid #dddfe1;
@@ -253,6 +274,14 @@ background:#eee;
 	line-height: 20px;
 	vertical-align: 2px;
 }
+
+.cartPut .total .price .sum	{
+/* 	display:block;
+	 */
+}
+
+
+
 
 .cartPut .total .price .sum	.num{
 	padding-left: 8px;
