--- a/src/main/webapp/resources/css/join.css
+++ b/src/main/webapp/resources/css/join.css
@@ -73,6 +73,16 @@
 			margin:10px 0;
 		}
 		
+		.br { /* soyeon작성 */
+		vertical-align:top;
+		margin-bottom: 30px;
+		}
+		
+		.br2 { /* soyeon작성 */
+		vertical-align:top;
+		margin-bottom: 8px;
+		}
+		
 		.border_write .memberCols1	{
 			padding:30px 0 0 30px;
 			width:150px;
@@ -153,8 +163,8 @@
 		
 		
 		
-		.avoidDbl		{
-			width:340px;
+		#avoidDbl		{
+			vertical-align:top;
 			margin:0 auto;	
 		}
 
@@ -175,11 +185,6 @@
 
 
 
-
-
-
-
-		
 		.bns_button	{
 			display:inline-block;
 			width:130px;
@@ -197,7 +202,21 @@
 		}
 
 
-
+		.bns_button2	{ /* soyeon작성 */
+			display:inline-block;
+			width:130px;
+			height:38px;
+			margin-lefe:10px;
+			font-size:14px;
+			border:1px solid #5f0080;
+			background-color: white;
+			color:#5f0080;
+			text-align:center;
+			line-height:34px;
+			border-radius:4px;
+			padding-top:2px;
+		
+		}
 
 
 
