--- a/src/main/webapp/resources/css/productSelect.css
+++ b/src/main/webapp/resources/css/productSelect.css
@@ -5,11 +5,6 @@ background:#eee;
 }
 
 
-button	{
-	padding:0;
-}
-
-
 
 .container {
 	margin:0 auto;
@@ -178,7 +173,7 @@ button	{
 
 .cartPut .list_nopackage .tit_item {
 	float: left;
-	width: 145px;
+	width: 150px;
 	font-size: 14px;
 	color: #666;
 	line-height: 20px;
@@ -203,51 +198,28 @@ button	{
 }
 
 
-.cartPut .list_nopackage .btn {
+.cartPut .list_nopackage .btn	{
 	overflow: hidden;
 	position: relative;
 	float: left;
 	width: 22px;
 	height: 22px;
 	border: 0;
-	border-radius:0;
 	background: #f6f7f7;
-	font-size:22px;
-	text-align:center;
-	color:black;
-	vertical-align: middle;
-
+	font-size: 0;
+	line-height: 0;
+	text-indent: -9999px;
 }
-/* 
-
-.btn2 {
-	float: left;
-	width: 22px;
-	height: 22px;
-	background: #f6f7f7;
-	border: 0;
-	border-radius:0;
-	
-} */
-
-
-
 
 .cartPut .list_nopackage .down {
-	border-right:1px solid #dddfe1;
-}
-
-.cartPut .list_nopackage .up {
-	border-left:1px solid #dddfe1;
+	
 }
 
 .cartPut .list_nopackage .inp	{
-	display:block;
 	float:left;
-	width: 40px;
+	width: 42px;
 	height: 24px;
-	padding: 0 0 2px 10px;
-	margin:0;
+	padding: 0 0 2px;
 	border: 0;
 	background: #fff;
 	color:#000;
@@ -274,14 +246,6 @@ button	{
 	line-height: 20px;
 	vertical-align: 2px;
 }
-
-.cartPut .total .price .sum	{
-/* 	display:block;
-	 */
-}
-
-
-
 
 .cartPut .total .price .sum	.num{
 	padding-left: 8px;
