--- a/src/main/webapp/resources/css/layout.css
+++ b/src/main/webapp/resources/css/layout.css
@@ -1,4 +1,6 @@
 @charset "UTF-8";
+@import url(http://fonts.googleapis.com/earlyaccess/notosanskr.css); 
+
 			*	{
 				padding:0;
 				margin:0;
@@ -38,7 +40,7 @@
 				font-size:12px;
 				text-decoration: none;
 				padding:0 10px;
-				font-family: "Noto sans";
+				font-family: 'Noto Sans KR', sans-serif;
 				
 			
 			}
@@ -69,7 +71,8 @@
 				height:55px;
 				margin:0 auto;
 				position:relative;
-				margin-top:10px;
+				margin-top:20px;
+				font-family: 'Noto Sans KR', sans-serif;
 				
 			}
 			
