--- a/src/main/webapp/resources/css/mypage.css
+++ b/src/main/webapp/resources/css/mypage.css
@@ -2,7 +2,6 @@
 @import url(http://fonts.googleapis.com/earlyaccess/notosanskr.css); 
 
 
-
 /* script쪽은 id를 주로 쓰고 css는 class를 주로쓴다. */
 
 
@@ -23,7 +22,7 @@
 				padding-bottom:20px;
 				border-bottom:1px solid #eee;
 				
-				padding: 20px 50px 20px 100px;
+				padding: 20px 50px 20px 50px;
 			
 }
 
@@ -58,22 +57,22 @@
 
 
 /* contents */
+/* 헷갈리면 background-color에 다른 컬러 넣어보기 */
 .mypage_contents {
 				width:1050px;
 				margin:0 auto;
-				height:500px;
+				height:600px;
 				
 				background-color: white;
 				overflow:hidden;
-				padding: 50px 100px;
-				
-				font-family: noto sans;
+				padding: 50px 180px 180px 180px;
+
 
 }
 
 .contents_inner {
 	float : left;
-	background-color: #f7f7f7;
+	background-color: white;
 	width:100%;
 	height: 50%;
 	margin: 0 auto ;
@@ -81,5 +80,20 @@
 	
 }
 
+.button_place {
+	width: 100%;
+	height: 100%;
+	background-color : white;
+	margin-top: 30px;
+}
+
+.button {
+	width: 300px;
+	height: 100%;
+	background-color: white;
+	
+	border: 5px solid #5f0080; 
+	border-radius: 2em;
+}
 
 
