--- a/src/main/webapp/resources/css/mypage.css
+++ b/src/main/webapp/resources/css/mypage.css
@@ -63,7 +63,7 @@
 				margin:0 auto;
 				height:560px;
 				
-				background-color: white;
+				background-color: skyblue;
 				overflow:hidden;
 				padding: 30px 180px 200px 180px;
 
