--- a/src/main/webapp/resources/css/mypage_info.css
+++ b/src/main/webapp/resources/css/mypage_info.css
@@ -19,14 +19,14 @@
 	padding : 30px 10px;
 }
 .line2 {
-	height : 20%; 
+	height : 18%; 
 	width: 100%; 
 	border-top: 2px solid #5f0080; 
 	 background-color: #f2f2f2; 
 	padding : 30px 10px;
 }
 .line3 {
-	height : 20%; 
+	height : 15%; 
 	width: 100%; 
 	border-top: 2px solid #5f0080; 
 	 background-color: #f2f2f2; 
@@ -67,4 +67,10 @@
 	font-size:14px;
 	outline:none;
 	padding-left: 10px;
+}
+
+.label_radio{
+	font-weight: normal;
+	font-size: 15px;
+	margin-top : 18px;
 }
