delete json ing

--- a/src/main/webapp/resources/css/productAdmin.css
+++ b/src/main/webapp/resources/css/productAdmin.css
@@ -8,11 +8,34 @@
 	margin:0 auto;
 }
 
-
-.btn{
-	float: right;
+.inner_listgoods h1{
+	margin: 0 auto;
+	text-align: center;
+	margin-bottom: 20px;
 }
 
+.list_goodss p{
+	margin : 0;
+	width: 200px;
+	height: 18px;
+}
+
+.list_goodss .btnw{
+	float:right;
+	padding:1px 1px;
+	margin-right: 56px;
+	
+}
+
+.ss{
+	float: left;
+}
+
+.ss .allCheck{
+	margin-left:18px;
+	float: left;
+	margin-bottom: 10px;
+}
 
 ul.list{
  list-style-type: none;
