--- a/src/main/webapp/resources/css/layout.css
+++ b/src/main/webapp/resources/css/layout.css
@@ -51,7 +51,6 @@
 			
 			.headerLogo	{
 				width:1050px;
-				height:63px;
 				margin:0 auto;
 				
 			}
@@ -68,24 +67,39 @@
 				width:103px;
 				height:79px;
 				
+				
 			}
+			
+			
+			.gnb_wrapper	{
+				width:100%;
+				height:55px;
+				position:sticky;
+				top:0;
+				background:white;
+				z-index:100;
+			}
+			
 			
 			.gnb	{
 				width:1050px;
 				height:55px;
 				margin:0 auto;
 				position:relative;
-				margin-top:20px;
 				font-family: 'Noto Sans KR', sans-serif;
 				
+
 			}
 			
-			.gnb ul {
+
+			
+			.gnb>ul {
 				float: left;
 				list-style-type: none;
 				display:inline-block;
 				width:1050px;
 				height:55px;
+				margin:0;
 				
 			}
 			.gnb ul .menu1 {
@@ -130,7 +144,6 @@
 			}
 			
 			.side_search .sc	{
-				width:156px;
 				height:36px;
 				padding:0 50px 0 30px;
 				border:1px solid #f7f7f6;
@@ -191,6 +204,7 @@
 				width:1050px;
 				height:100%;
 				margin:0 auto;
+				margin-bottom:80px;
 				
 			}
 			
@@ -211,8 +225,11 @@
 				height: 100%;
 			}
 			
+			.list_goods>ul	{
+				height:400px;
+			}
 		
-			.list_goods ul li	{
+			.list_goods>ul li	{
 				width:249px;
 				float:left;
 				margin-right:18px;
@@ -220,11 +237,11 @@
 				margin-bottom:15px;
 				list-style-type: none;
 			}
-			.list_goods ul li:last-child{
+			.list_goods>ul li:last-child{
 				margin-right:0;
 			}
 			
-			.list_goods ul li img	{
+			.list_goods>ul li img	{
 			
 				width:100%;
 			}
