--- a/src/main/webapp/resources/css/productAdmin.css
+++ b/src/main/webapp/resources/css/productAdmin.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 
 @charset "UTF-8";
 
@@ -16,14 +15,38 @@
 
 .list_goodss p{
 	margin : 0;
-	width: 200px;
+	width: 100px;
 	height: 18px;
 }
+
+.list_goodss .btn_delete{
+	float:left;
+	width: 88px;
+    height: 22px;
+	border: 1px solid #5f0080;
+	background: #fff;
+    color: #5f0080;
+	padding-bottom: 2px;
+	margin-right: 10px;
+	letter-spacing: -3px;
+    text-align: center;
+}
+
+
 
 .list_goodss .btnw{
 	float:right;
 	padding:1px 1px;
 	margin-right: 56px;
+	width: 88px;
+    height: 42px;
+	border: 1px solid #5f0080;
+	background: #fff;
+    color: #5f0080;
+	padding-bottom: 2px;
+	
+	letter-spacing: -3px;
+    text-align: center;
 	
 }
 
