--- a/src/main/webapp/resources/css/productAdmin.css
+++ b/src/main/webapp/resources/css/productAdmin.css
@@ -68,7 +68,7 @@ ul.list{
 
 .goodsList{
 	width: 1050px;
-	height: 100%;
+	
 
 }
 
@@ -139,5 +139,6 @@ ul.list{
 }
 
 .page1{
+	text-align: center;
 	padding-top: 100px;
 }
