--- a/src/main/webapp/resources/css/mypage.css
+++ b/src/main/webapp/resources/css/mypage.css
@@ -51,8 +51,10 @@
 	/* border-radius: 2em; */
 }
 .name {
+	width : 75px;
 	font-weight: bold;
 	font-size: 20px;
+	border: 1px solid white; 
 }
 
 
