--- a/src/main/webapp/resources/css/layout.css
+++ b/src/main/webapp/resources/css/layout.css
@@ -74,10 +74,13 @@
 			.gnb_wrapper	{
 				width:100%;
 				height:55px;
+				position: -webkit-sticky;
 				position:sticky;
 				top:0;
 				background:white;
 				z-index:100;
+				box-shadow: 0 5px 30 5px gray;
+				
 			}
 			
 			
@@ -190,7 +193,6 @@
 			}
 			
 			.mainImage .listGoods a {
-				background-image: url("../images/pc_img.png"); 
 				background-repeat: no-repeat;	
 				width:100%;
 				height:370px;
