--- a/src/main/webapp/resources/css/cartPay.css
+++ b/src/main/webapp/resources/css/cartPay.css
@@ -17,7 +17,7 @@
 	position: relative;
 	height: 58px;
 	margin-top: 9px;
-	border-bottom: 4px solid #444;
+	border-bottom: 4px solid #5f0080;
 }
 
 .cw_hgroup .tit{
