--- a/src/main/webapp/resources/css/mypage_purchase.css
+++ b/src/main/webapp/resources/css/mypage_purchase.css
@@ -1,1 +1,20 @@
 @charset "UTF-8";
+
+.mypage_contents3 {
+				width:1050px;
+				margin:0 auto;
+				height:1300px;
+				overflow:hidden;
+				/*  background-color: skyblue;  */
+				padding: 30px 180px 200px 210px;
+
+
+}
+
+.line_p {
+	height : 100%; 
+	width: 100%; 
+	border-top: 2px solid #5f0080; 
+	 background-color: #f2f2f2; 
+	padding : 30px 10px;
+}
