--- a/src/main/webapp/resources/css/cartPay.css
+++ b/src/main/webapp/resources/css/cartPay.css
@@ -235,6 +235,10 @@ body, h1, h2, h3, h4, h5, h6, p, ul, ol, dl, dd, form, fieldset, pre, figure, bl
     margin-top: 20px;
 }
 
+.CartTable1_Wrap .th3{
+	width: 200px;
+}
+
 .CartTable1_Wrap > table {
     width: 100%;
     border: 0;
