--- a/src/main/webapp/resources/css/mypage_purchase.css
+++ b/src/main/webapp/resources/css/mypage_purchase.css
@@ -3,7 +3,7 @@
 .mypage_contents3 {
 				width:1050px;
 				margin:0 auto;
-				height:1300px;
+				height:100%;
 				overflow:hidden;
 				/*  background-color: skyblue;  */
 				padding: 30px 180px 200px 210px;
