--- a/src/main/webapp/resources/css/productSelect.css
+++ b/src/main/webapp/resources/css/productSelect.css
@@ -15,6 +15,7 @@ button	{
 
 .container {
 	margin:0 auto;
+	margin-top:50px;
 	
 
 }
@@ -279,10 +280,19 @@ button	{
 
 .cartPut .list_nopackage .down {
 	border-right:1px solid #dddfe1;
+	background-image: url("../images/cnt_m.png");
+	background-repeat: no-repeat;
+    background-position: 5px 10px;
+    background-size:15px;
+	
 }
 
 .cartPut .list_nopackage .up {
 	border-left:1px solid #dddfe1;
+	background-image: url("../images/cnt_p.png");
+	background-repeat: no-repeat;
+    background-position: 5px 4px;
+    background-size:15px;
 }
 
 .cartPut .list_nopackage .inp	{
@@ -301,27 +311,35 @@ button	{
 
 
 .cartPut .total	{
+	display:inline-block;
 	padding:30px 0 20px;
 	border-top:1px solid #f4f4f4;
+	height:100%;
+	width:560px;
+	float:right;
 }
 
 
 .cartPut .total .price	{
 	overflow:hidden;
 	text-align: right;
+	float:right;
 }
 
 
 .cartPut .total .price .tit	{
 	font-weight: 700;
 	font-size: 13px;
-	line-height: 20px;
+	line-height: 40px;
 	vertical-align: 2px;
+	float:left;
+	
 }
 
 .cartPut .total .price .sum	{
 /* 	display:block;
 	 */
+	 float:left;
 }
 
 
@@ -332,14 +350,17 @@ button	{
 	font-weight: 800;
 	font-size: 32px;
 	line-height: 32px;
+	float:left;
+	
 }
 
 .cartPut .total .price .sum	.won	{
 	padding-left: 2px;
 	font-weight: 700;
 	font-size: 20px;
-	line-height: 20px;
+	line-height: 40px;
 	vertical-align: -1px;
+	float:left;
 }
 
 
