--- a/src/main/webapp/resources/css/mypage_purchase.css
+++ b/src/main/webapp/resources/css/mypage_purchase.css
@@ -15,6 +15,13 @@
 	height : 100%; 
 	width: 100%; 
 	border-top: 2px solid #5f0080; 
-	 background-color: #f2f2f2; 
+	background-color: #f2f2f2; 
 	padding : 30px 10px;
+}
+
+.list_p {
+	height : 300px;
+	width : 100%;
+	background-color: white; 
+	border: 1px solid black; 
 }
