--- a/src/main/webapp/resources/css/productSelect.css
+++ b/src/main/webapp/resources/css/productSelect.css
@@ -21,6 +21,7 @@ button	{
 }
 /*상세 창 수정*/
 .contents {
+	width:1170px;
 	margin:0 auto;
 	height: 100%;
 }
@@ -39,7 +40,7 @@ button	{
 .goods-view-infomation-tab-group {
     border-bottom: 1px solid #bfbfbf;
     width: 1040px;
-    margin-left: 385px;
+
    
 }
 .cimg{
@@ -52,11 +53,11 @@ button	{
 	height:1000px;
 }
 
-.contentsImg span p{
+/* .contentsImg span p{
 	margin-top:100px;
 	margin-left: 180px;;
 }
-
+ */
 
 
 
@@ -554,3 +555,84 @@ product list
     font-weight: 300;
 }
  */
+ 
+ 
+ 
+ 
+
+ 
+ .mypage_contents3 {
+		width:1050px;
+		margin:0 auto;
+		height:100%;
+		overflow:hidden;
+		/*  background-color: skyblue;  */
+		padding: 30px 180px 200px 210px;
+}
+
+.line_p {
+	height : 100%; 
+	width: 100%; 
+	border-top: 2px solid #5f0080; 
+	background-color: white; 
+	padding : 30px 10px;
+}
+
+.listp {
+	font-weight: bold;
+	color: #808080;
+}
+.list_p {
+	height : 170px;
+	width : 860px;
+	background-color: white; 
+	border-bottom: 1px solid #cccccc; 
+	margin: 10px 155px 0;
+	padding: 0 20px;
+	margin-bottom: 20px;
+	
+}
+
+
+.list_p_name {
+	padding: 20px 0 13px;
+}
+.list_p_name2 {
+	float: right;
+}
+
+
+.list_p_content {
+	padding: 10px;
+	border-top: 1px solid #cccccc; 
+	height: 60%;
+	width: 100%;
+	
+}
+
+.list_p_photo {
+	float: left;
+}
+.list_p_contents1 {
+	float: right;
+	width:85%;
+	height:100%;
+}
+.list_p_contents2 {
+	width:100%;
+	height:33%;	
+}	
+
+
+.section{
+
+border-top:2px solid #000; 
+width:1050px; 
+margin:0 auto;
+
+
+}
+
+
+
+
