--- a/src/main/webapp/resources/css/productSelect.css
+++ b/src/main/webapp/resources/css/productSelect.css
@@ -11,6 +11,7 @@ button	{
 
 .btn{
 	float: right;
+	
 }
 
 .container {
@@ -723,4 +724,9 @@ margin-top:30px;
 	font-size: 12px;
 	line-height: 18px;
 }
+
+.btn-danger{
+	margin-right: 200px;
+}
+
 
