--- a/src/main/webapp/resources/css/productWrite.css
+++ b/src/main/webapp/resources/css/productWrite.css
@@ -25,3 +25,13 @@ h4{
 	display: none;
 	
 }
+
+#btnR{
+	margin-top:50px;
+	margin-bottom: 70px;
+}
+
+#btnW{
+	margin-top:50px;
+	margin-bottom: 70px;
+}
