--- a/src/main/webapp/resources/css/qnaSelect.css
+++ b/src/main/webapp/resources/css/qnaSelect.css
@@ -3,7 +3,7 @@
 
 .container{
 	margin-top:50px;
-	margin-bottom: 100px;	
+	margin-bottom: 80px;	
 }
 
 .panel-default{
@@ -16,6 +16,7 @@
 }
 
 .btn{
+	margin-top:30px;
 	margin-left: 485px;
 }
 
