--- a/src/main/webapp/resources/css/productWrite.css
+++ b/src/main/webapp/resources/css/productWrite.css
@@ -26,12 +26,12 @@ h4{
 	
 }
 
-#btnR{
+.btnR{
 	margin-top:50px;
 	margin-bottom: 70px;
 }
 
-#btnW{
+.btnW{
 	margin-top:50px;
 	margin-bottom: 70px;
 }
