--- a/src/main/webapp/resources/css/productSelect.css
+++ b/src/main/webapp/resources/css/productSelect.css
@@ -724,3 +724,20 @@ margin-top:30px;
 	line-height: 18px;
 }
 
+
+.btn_qna{
+	margin-right: 30px;
+	background-color: #5f0080;
+	color: white;
+}
+
+.qna{
+	margin-top:40px;
+	margin-left: 20px;
+}
+
+.btnU{
+	padding-top: 0px;
+}
+
+
