--- a/src/main/webapp/resources/css/productSelect.css
+++ b/src/main/webapp/resources/css/productSelect.css
@@ -759,3 +759,111 @@ margin-top:30px;
 	line-height: 18px;
 }
 
+
+
+/*alert*/
+/*alert*/
+
+.ask-layer-wrapper	{
+	position:fixed;
+	width:100%;
+	height:100%;
+	top:0;
+	left:0;
+}
+
+.ask-alert-window	{
+	position:absolute;
+	z-index:9999;
+	background-color:#fff;
+	top:350px;
+	right: 0;
+	left: 0;
+	margin: auto;
+	width:490px;
+}
+
+
+.ask-alert-window .ask-alert-type-message	{
+	width:490px;
+}
+
+
+.ask-alert-wrapper	{
+	position:relative;
+	margin: 25px;
+}
+
+.ask-alert-header{
+	font-size: 14px;
+	font-weight: 700;
+	letter-spacing: -.025em;
+	color: #5f0080;
+	padding-bottom: 20px;
+	border-bottom: 1px solid #b2b2b2;
+	margin-bottom: 25px;
+}
+
+.ask-alert-type-message .ask-alert-content	{
+	display: table;
+	width: 100%;
+}
+
+.ask-alert-close-button	{ /*x*/
+	width:20px;
+	height: 20px;
+	background-image:url(https://res.kurly.com/pc/etc/old/images/common/icon-close-button.png);
+	position: absolute;
+	text-indent:-9999px;
+	top: 0;
+	right: 0;
+	border: 0;
+	background-repeat: no-repeat;
+	background-color: transparent;
+	
+}
+
+.ask-alert-message	{
+	text-align: center;	
+	font-size: 15px;
+	font-weight: 700;
+}
+
+.ask-alert-footer	{
+	text-align: center;
+	background-color: #f5f5f5;
+	padding: 30px 0;
+}
+
+
+.ask-layer-background	{
+	display: block;
+	width:100%;
+	height: 100%;
+	background-color: #000;
+	position: absolute;
+	left:0;
+	top:0;
+	opacity: .5;
+}
+
+.ask-alert-footer .styled-button	{
+	font-size: 13px;
+	width:150px;
+	height:45px;
+	line-height: 45px;	
+	
+}
+
+.styled-button	{
+	display: inline-block;
+	border:1px solid #5f0080;
+	background: #5f0080;
+	color:#fff;
+}
+
+
+.styled-button .__active	{
+	background: #5f0080;
+	color:#fff;
+}
