--- a/src/main/webapp/resources/css/productList.css
+++ b/src/main/webapp/resources/css/productList.css
@@ -93,6 +93,7 @@ ul.list{
     -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
     word-wrap: break-word;
+    font-family: noto sans;
     
 }
 
@@ -111,4 +112,15 @@ ul.list{
 	text-align: center;
 	padding-top: 80px;
 	padding-bottom: 60px;
+}
+
+.info_goods{
+	margin-top: 10px;
+	margin-left: 10px;
+	
+}
+
+
+.cost{
+	margin-top: 5px;
 }
