--- a/src/main/webapp/resources/css/productSelect.css
+++ b/src/main/webapp/resources/css/productSelect.css
@@ -53,7 +53,7 @@ button	{
 .contentsImg {
 	margin-left: 235px;
 	width:1040px;
-	height:1000px;
+	height:100%;
 }
 
 /* .contentsImg span p{
@@ -881,4 +881,6 @@ margin-top:30px;
 	margin-left: 20px;
 }
 
-
+.del{
+	margin-top: 7px;
+}
