--- a/src/main/webapp/resources/css/productSelect.css
+++ b/src/main/webapp/resources/css/productSelect.css
@@ -47,13 +47,21 @@ button	{
    
 }
 .cimg{
-	width: 1040px;
+	border-top:2px solid #522772;
+	width: 1010px;
 	height: 100%;
+	margin-top:30px;
 }
 .contentsImg {
-	margin-left: 235px;
-	width:1040px;
+	margin-top:50px;
+	width:1010px;
 	height:100%;
+	
+}
+
+.contentsImg img	{
+	display:block;
+	margin:0 auto;
 }
 
 /* .contentsImg span p{
@@ -721,6 +729,10 @@ margin-top:30px;
 	margin:0 auto;
 }
 
+.nav-tabs a	{
+	color:#5f0080;
+	font-weight: 700;
+}
 
 
 .tab-wrapper	{
@@ -743,10 +755,22 @@ margin-top:30px;
 	overflow: hidden;
 }
 			
+			
+#home	{
+	margin-top:30px;
+}			
+			
 #menu1	{
 	margin-top:30px;
 	
 }
+
+#menu2	{
+	margin-top:30px;
+	
+}
+
+
 .reviewTitle	{
 	font-size:13px;
 	font-weight:700;
@@ -763,7 +787,7 @@ margin-top:30px;
 
 
 
-/*alert*/
+
 /*alert*/
 
 .ask-layer-wrapper	{
@@ -857,6 +881,7 @@ margin-top:30px;
 	
 }
 
+
 .styled-button	{
 	display: inline-block;
 	border:1px solid #5f0080;
@@ -869,6 +894,127 @@ margin-top:30px;
 	background: #5f0080;
 	color:#fff;
 }
+
+/* end alert*/
+
+
+/* review modal */
+.layer-wrapper	{
+	display: block;
+	position:fixed;
+	width:100%;
+	height:100%;
+	top:0;
+	left:0;
+	
+	
+
+
+	
+}
+
+.layer-background {
+	width:100%;
+	height:100%;
+	background-color: #000;
+	opacity: .1;
+	
+}
+
+.alert-window	{
+	position:absolute;
+	z-index:9999;
+	background-color:#fff;
+	top:310px;
+	right: 0;
+	left: 0;
+	margin: auto;
+	width:490px;
+	height:460px;
+	border:3px solid #5f0080;
+	
+}
+
+.window-text	{
+	height: 55px;
+	border-bottom: 1px solid #ddd;
+}
+
+.window-text p	{
+	margin:0;
+	padding-top:16px;
+	margin-left:10px;
+	font-size: 18px;
+	font-weight: 700;
+	color:#5f0080;
+}
+
+
+.window-tit	{
+	height:55px;
+	border-bottom: 1px solid #ddd;
+	
+}
+
+.window-tit p	{
+	font-size: 15px;
+	font-weight: 700;
+	margin-left:10px;
+	line-height: 40px;
+}
+
+.window-con .con-img	{
+	display:block;
+	width:430px;
+	height:270px;
+	overflow: hidden;
+	
+}
+
+.window-con .con-img img	 {
+	display:block;
+	width:100%;
+}
+
+.window-con .con	{
+	margin:0;
+	margin-top:5px;
+}
+
+
+
+
+
+.alert-close-button	{
+	width:20px;
+	height: 20px;
+	background-image:url(https://res.kurly.com/pc/etc/old/images/common/icon-close-button.png);
+	position: absolute;
+	text-indent:-9999px;
+	top: 10px;
+	right: 10px;
+	border: 0;
+	background-repeat: no-repeat;
+	background-color: transparent;
+	
+}
+
+
+
+.window-inner {
+	display:block;
+	width:100%;
+	padding:10px;
+}
+
+
+/* end review modal */
+
+
+
+
+
+
 
 .btn_qna{
 	margin-right: 30px;
